Ajout des fichiers modifiés + MaJ html

--- a/Sources/page2.html
+++ b/Sources/page2.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Lang=FR?--><html lang="Default">
+<html lang="Default">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <!-- donner un titre à la page, par ex: contact? --><title>page2</title>
+    <title>page2</title>
 
     
 <!-- Analytics -->
