--- a/index.html
+++ b/index.html
@@ -6,35 +6,33 @@
 			<title>La chouette agence | entreprise de web design</title> 
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 			<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-			
 			<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 			<link rel="stylesheet" type="text/css" href="style.css">
 			<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 			<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-			
-			
-			<script async src="./js/jquery-2.1.0.js"></script>
-			<script async src="./js/bootstrap.js"></script>
-			<script async src="./js/blocs.js"></script>
-			<script src="./js/jquery.touchSwipe.js" defer></script>
-			<script async src="./js/gmaps.js"></script>
 		<!--balise robots?-->    
 		<!-- Analytics -->
 		<!-- Analytics END -->   
 		</head>
 		<body>
 		<!-- Principal conteneur -->
-			<div class="page-container">
+			<div class="page-container">	
 				
 				<!-- bloc-0 -->
 				<div class="bloc bgc-white l-bloc " id="bloc-0">
 					<div class="container bloc-sm">
 						<nav class="navbar row">
 							<div class="navbar-header">
-								<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Bannière la chouette agence agence web sur Lyon" height="55"></a>
+								<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="Bannière la chouette agence agence web sur Lyon" height="55"/></a>
+								<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+									<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+								</button>
 							</div>
 							<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 								<ul class="site-navigation nav navbar-nav">
+									<li>
+										<a href="index.html">Accueil</a>
+									</li>
 									<li>
 										<a href="page2.html">Contact</a>
 									</li>
@@ -52,12 +50,13 @@
 							<div class="col-sm-12">
 								<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La chouette agence" />
 								<h1 class="text-center hero-bloc-text tc-white ">
-									La chouette agence<br>
-									Entreprise de web design à Lyon 
+									La chouette agence
 								</h1>
-								<div class="text-center">
-									<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
-								</div>
+								<p class="text-center text-bg 
+								
+								tc-white">
+									Entreprise de web design à Lyon 
+								</p>
 							</div>
 						</div>
 					</div>
@@ -69,9 +68,9 @@
 					<div class="container bloc-md">
 						<div class="row">
 							<aside class="col-sm-12 text-center">
-								<p class="text-bg">
+								<h2 class="text-bg">
 									La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visible sur Internet
-								</p>
+								</h2>
 							</aside>
 						</div>
 						<div class="row voffset-lg med-width-whitespace">
@@ -135,7 +134,6 @@
 								</h2>
 								<p class="text-center white text-description">
 									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
-									<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
 								</p>
 							</div>
 						</div>
@@ -176,7 +174,7 @@
 						</div>
 						<div class="row tight-width-whitespace portfolio-row">
 							<div class="col-sm-6">
-								<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" loading="lazy" alt="Materiels de photographe"/></a>
+								<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" loading="lazy" alt="Matériels de photographe"/></a>
 								<h3 class="mg-md text-center">
 									Création d'un site internet pour un voyageur
 								</h3>
@@ -206,6 +204,7 @@
 								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 							</h2>
 							<div class="col-sm-12 text-center">
+
 								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 							</div>
 						</div>
@@ -224,22 +223,22 @@
 								<div class="row row-no-gutters social">
 									<div class="col-sm-3">
 										<div class="text-center">
-											<a class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"> Twitter</span></a>
+											<a class="social" aria-label="Twitter" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="text-center">
-											<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"> Facebook</span></a>
+											<a class="social" aria-label="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="text-center">
-											<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"> Dribbble</span></a>
+											<a class="social" aria-label="Dribbble" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 										</div>
 									</div>
 									<div class="col-sm-3">
 										<div class="text-center">
-											<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"> Instagram</span></a>
+											<a class="social" aria-label="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 										</div>
 									</div>
 								</div>
@@ -250,5 +249,10 @@
 				<!-- Footer - bloc-8 END -->
 			</div>
 			<!-- Principal conteneur END -->
+			<script defer src="./js/jquery-2.1.0.js"></script>
+			<script defer src="./js/bootstrap.js"></script>
+			<script defer src="./js/blocs.js"></script>
+			<script defer src="./js/jquery.touchSwipe.js"></script>
+			<script defer src="./js/gmaps.js"></script>
 		</body>
 	</html>
