MaJ bouton contact + suppression <br>

--- a/page2.html
+++ b/page2.html
@@ -51,8 +51,8 @@
 								<h1 class="text-center hero-bloc-text black">
 									Parlons web design !
 								</h1>
-								<p class="text-center mg-lg black text-description-bold">
-									Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+								<p class="text-center mg-lg black text-description-bold text-width-long">
+									Nous sommes ravis que vous souhaitiez collaborer avec notre agence.
 									Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 								</p>
 							</div>
@@ -104,7 +104,7 @@
 						<div class="row">
 							<div class="col-sm-12">
 								<p class="text-center text-description-bold black">
-									La chouette agence - Agence web basée à Lyon.<br>
+									La chouette agence - Agence web basée à Lyon.
 								</p>
 								<div class="row row-no-gutters social">
 									<div class="col-sm-3">
