--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 								<h1 class="text-center hero-bloc-text tc-white ">
 									La chouette agence
 								</h1>
-								<p class="text-center text-bg 
-								
-								tc-white">
+								<p class="text-center text-bg tc-white">
 									Entreprise de web design à Lyon 
 								</p>
 							</div>
@@ -130,10 +128,10 @@
 						<div class="row tight-width-whitespace black-background">
 							<div class="col-sm-12">
 								<h2 class="mg-md text-center tc-white">
-									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+									Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.
 								</h2>
 								<p class="text-center white text-description">
-									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
+									Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
 								</p>
 							</div>
 						</div>
@@ -147,8 +145,7 @@
 						<div class="row">
 							<aside class="col-sm-12 text-center">
 								<p class="text-bg">
-									Nous travaillons avec beaucoup de clients, <br>
-									voici nos réalisations.
+									Nous travaillons avec beaucoup de clients, voici nos réalisations.
 								</p>
 							</aside>
 						</div>
@@ -200,11 +197,10 @@
 				<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 					<div class="container bloc-lg">
 						<div class="row">
-							<h2 class="mg-md text-center white">
-								Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
-							</h2>
 							<div class="col-sm-12 text-center">
-
+								<h2 class="mg-md text-center white text-width">
+									Prêt pour redonner vie à votre projet ? Contactez notre équipe !
+								</h2>
 								<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 							</div>
 						</div>
